# cargo

# [[file:~/Workspace/Programming/gosh-rs/database/database.note::*cargo][cargo:1]]
[package]
name = "gosh-database"
version = "0.0.6"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
diesel = { version = "1", features = ["sqlite"] }
diesel_migrations = "1"
# Important for statically linking SQLite3
libsqlite3-sys = { version = "^0.9", features = ["bundled"] }
dotenv = "0.10"
serde = {version="1", features = ["derive"]}
serde_json = "1"
bincode = "1"
gosh-core = { version="0.0.1", path="../core" }
gosh-model = { version="0.0.8", path="../models"}

[dev-dependencies]
tempfile = "3"

[features]
# for adhoc hacking
adhoc = []
# cargo:1 ends here
