# [[file:database.note::c0c66bbe][c0c66bbe]]
[package]
name = "gosh-database"
version = "0.1.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "database for gosh"
homepage = "https://github.com/gosh-rs/gosh-database"
repository = "https://github.com/gosh-rs/gosh-database"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derivative = "2.1.1"
diesel = { version = "1", features = ["sqlite"] }
diesel_migrations = "1"
# Important for statically linking SQLite3
libsqlite3-sys = { version = "0.22", features = ["bundled"] }
dotenv = "0.15"
serde = {version="1", features = ["derive"]}
serde_json = "1"
bincode = "1"
gosh-core = "0.1.0"
gosh-model = "0.1.0"

[dev-dependencies]
tempfile = "3"

[features]
# for adhoc hacking
adhoc = []
# c0c66bbe ends here
